# Meeting-Assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
cli/: main.py
core/: __init__.py  config.py  database.py  exceptions.py
core/aggregation/: __init__.py  aggregator.py
core/correction/: __init__.py  corrector.py  dictionary.py
core/document/: __init__.py  generator.py
core/llm/: __init__.py  base.py  litellm_client.py
core/models/: __init__.py  meeting.py  prompt.py  summary.py  task.py  transcript.py
core/storage/: __init__.py  base.py  local_client.py
core/stt/: __init__.py  base.py  faster_whisper_client.py  http_client.py
core/summary/: __init__.py  summarizer.py  templates.py
docker/: gateway.Dockerfile  stt_service.Dockerfile  task_worker.Dockerfile
docs/: architecture.md  development.md  usage.md
services/gateway/: dependencies.py  main.py
services/gateway/routers/: documents.py  meetings.py  prompts.py  tasks.py
services/gateway/static/: index.html
services/stt_service/: main.py
services/task_worker/: celery_app.py
services/task_worker/tasks/: aggregation.py  correction.py  stt.py  summary.py
tests/: conftest.py  test_aggregation.py  test_api_documents.py  test_api_meetings.py  test_api_prompts.py  test_api_tasks.py  test_cli.py  test_correction.py  test_document.py  test_llm.py  test_models.py  test_storage.py  test_stt.py  test_summary.py
